<resources>
    <string name="app_name" translatable="false">Amarok</string>
    <string name="unhide">Unhide</string>
    <string name="hide">Hide</string>
    <string name="visible_status">Visible</string>
    <string name="hidden_status">Hidden</string>
    <string name="visible_moto" translatable="false">"\"Night has fallen. Be careful.\" "</string>
    <string name="hidden_moto" translatable="false">"\"Secrets never emerge under the sun.\" "</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="set_hide_apps">Set Hidden Apps</string>
    <string name="setting_not_ava_when_hidden">This setting is only available after unhiding</string>
    <string name="storage_permission_request_title">Storage permission required</string>
    <string name="storage_permission_request_message">Grant Amarok access to external storage to hide files.</string>
    <string name="storage_permission_denied">Storage permission denied. File-hiding is unavailable</string>
    <string name="apphider_not_ava">App-hiding unavailable. Check \"More Settings\" → \"Switch app-hiding mode\".</string>
    <string name="set_hide_files">Set Hidden Files</string>
    <string name="show_about">Show about</string>
    <string name="moto" translatable="false">Hunting alone in the starless night.</string>
    <string name="enable_analytics">Anonymous analytics</string>
    <string name="analytics_description">Send anonymous crash reports to the developers for analysis.</string>
    <string name="about_description">Shows info about the app.</string>
    <string name="usage">Usage</string>
    <string name="usage_description">Open help center.</string>
    <string name="switch_app_hider">Switch app-hiding mode</string>
    <string name="current_mode">Current Mode: %s</string>
    <string name="more_settings">More Settings</string>
    <string name="switch_file_hider">Switch file-hiding mode</string>
    <string name="apply_on_restart">Restart the app to apply the new changes.</string>
    <string name="hidden_toast">Hidden</string>
    <string name="unhidden_toast">Unhidden</string>
    <string name="show_debug_info">Debug info</string>
    <string name="debug_info_description">Displays information to help troubleshoot issues.</string>
    <string name="invalid_dsm_provider">DSM: Invalid DSM provider. Have you installed and activated the DSM provider on your device?</string>
    <string name="hide_app_failed_admin_inactive">Could not hide app: DSM provider not active.</string>
    <string name="add_hide_files">Add hidden folder</string>
    <string name="folder_selector_hints">Hints for folder selector: \n\t 1. Click \"Use This Folder\" to select the folder\n\t 2. Always select a file on the device \n\t(Slide from the right of the screen to open local files)</string>
    <string name="remove_hide_path">Remove hidden folder?</string>
    <string name="remove_hide_path_description">Remove folder \'%s\' from hidden list?</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_with_countdown">Confirm (%1$ds)</string>
    <string name="not_local_storage">Unsupported directory</string>
    <string name="not_local_storage_description">Please ensure it is local file and not a virtual one.</string>
    <string name="help">Help</string>
    <string name="path_duplicated">Loop hidden folder</string>
    <string name="path_duplicated_description"><u>\'%1$s\'</u>\n\ncontains\n\n<u>\'%2$s\'</u></string>
    <string name="no_apphider">Please select app-hiding mode in \"More settings\".</string>
    <string name="root_not_ava">Could not gain root access.</string>
    <string name="check_update_on_start">Auto update</string>
    <string name="check_update_on_start_description">Check for new versions on startup.</string>
    <string name="check_update">Check for update</string>
    <string name="check_update_description">Current version: %s</string>
    <string name="update_ava">New version available</string>
    <string name="update_description">Amarok %s (%d) is available to download and install.</string>
    <string name="update">Update</string>
    <string name="never">Never</string>
    <string name="no_update_ava">You are running the latest version.</string>
    <string name="update_channel">Update channel</string>
    <string name="update_channel_release">Stable releases</string>
    <string name="update_channel_beta">Beta pre-releases</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_available_message">Version %s is now available for update.</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="checking_update">Checking for updates…</string>
    <string name="update_check_failed">Failed to check for updates</string>
    <string name="manually_set_path">Pick manually</string>
    <string name="manually_set_path_description">Caution: Ensure the what you select manually actually exists, as this is not validated.</string>
    <string name="view_github_repo">GitHub repository</string>
    <string name="view_github_repo_description" translatable="false">deltazefiro/Amarok-Hider</string>
    <string name="shizuku_pre_v11">Unsupported Shizuku version: Pre-v11. Please install Shizuku v11 or later.</string>
    <string name="shizuku_permission_denied">Shizuku: Permission denied</string>
    <string name="shizuku_not_working">Shizuku: Service unavailable. Have you installed Shizuku/Sui on your device?</string>
    <string name="shizuku_hidden_api_error">Could not hide app: Could not access IPackageManager API.</string>
    <string name="shizuku_service_not_running">Shizuku: Service not running.</string>
    <string name="apphider_not_ava_title">Service unavailable</string>
    <string name="dsm_permission_denied">DSM: Permission denied</string>
    <string name="apphider_none">Disabled</string>
    <string name="apphider_none_description">Turn off app-hiding.</string>
    <string name="apphider_root">Root mode</string>
    <string name="apphider_root_description">App-hiding with root access.\nRecommended if your device is rooted, but lacks the Xposed framework. Root permission is required.</string>
    <string name="apphider_shizuku">Shizuku (Sui) mode</string>
    <string name="apphider_shizuku_description">App-hiding with Shizuku (or Sui). \nRecommended if your device runs Android 11+ or has the Xposed framework. Installed and active Shizuku or Sui required.\n</string>
    <string name="apphider_dsm">DSM mode</string>
    <string name="apphider_dsm_description">App-hiding with Delegated-Scopes-Manager.\nNot recommended unless your device runs Android 10 or earlier and is not rooted. May be buggy and work unexpectedly. Installed Icebox (or StopAPP) set as device owner required.</string>
    <string name="learn_more">Setup tutorial</string>
    <string name="option_unava_when_hidden">Options are unavailable until unhidden.</string>
    <string name="obfuscate_filename">Obfuscate filenames</string>
    <string name="obfuscate_filename_description">Makes the filename human-unreadable. Basic file-hiding feature that cannot be turned off.</string>
    <string name="obfuscate_file_header">Obfuscate file headers</string>
    <string name="obfuscate_file_header_description">Obfuscates the file signature in the file header to make the file appear corrupted. Prevents the file from being opened manually with \"Open With\", but may slow down the hiding process.</string>
    <string name="filename_only">Filenames only</string>
    <string name="filename_and_header">Filename + Header</string>
    <string name="obfuscate_text_file">Fully obfuscate text files</string>
    <string name="obfuscate_text_file_description">Obfuscating file headers has no effect on text files. Enabling this function will fully obfuscate text files.</string>
    <string name="obfuscate_text_file_enhanced">Fully obfuscate text files - Enhanced</string>
    <string name="obfuscate_text_file_description_enhanced">Not recommended. An enhanced version of \"Fully obfuscate text files\". Use this option only if the standard method proves ineffective. Significantly slows down the hiding process.</string>
    <string name="join_developer_channel">Telegram group</string>
    <string name="developer_channel_telegram" translatable="false">Telegram @amarok_dev</string>
    <string name="processing">Processing…</string>
    <string name="doc_url">https://deltazefiro.github.io/Amarok-doc/en-US/</string>
    <string name="common_error_doc_url">https://deltazefiro.github.io/Amarok-doc/en-US/hideapp.html#common-errors</string>
    <string name="hideapp_doc_url">https://deltazefiro.github.io/Amarok-doc/en-US/hideapp.html</string>
    <string name="alert_permission_denied">Permission to display over other apps denied.</string>
    <string name="alert_permission_request_title">Permission to spawn pop-up windows required</string>
    <string name="alert_permission_request_message">The floating button needs permission to spawn pop-up windows. Please grant this permission in the settings menu under Amarok.</string>
    <string name="workmode">Workmode</string>
    <string name="misc">Misc.</string>
    <string name="security">Security</string>
    <string name="panic_button">Panic button</string>
    <string name="panic_button_description">Displays a floating button to quickly hide apps and files in an emergency. This button appears over all other apps when Amarok is unhidden.</string>
    <string name="panic_button_color">Panic button color</string>
    <string name="panic_button_color_description">Customize the panic button color.</string>
    <string name="in_app_update_failed">New version available, but download failed. Please update manually.</string>
    <string name="failed_to_open_doc_tree">Could not open the system file picker</string>
    <string name="failed_to_open_doc_tree_description">Oops! Your system lacks a default file manager. Please long-press the \"Add Hidden Folder\" button and manually input the path.</string>
    <string name="search">Search</string>
    <string name="notification_channel_name">Quick Hide Service</string>
    <string name="quick_hide">Quick Hide</string>
    <string name="notification">Notification</string>
    <string name="quick_hide_notification_description">Displays a persistent notification to notify users when not hidden.</string>
    <string name="notification_permission_request_title">Notification permission required</string>
    <string name="notification_permission_request_message">The QuickHide service needs notification permission to function.</string>
    <string name="notification_permission_denied">Notification permission denied.</string>
    <string name="quick_hide_notification_title">Privacy not hidden</string>
    <string name="quick_hide_notification_content">Your privacy is not hidden. Click to hide.</string>
    <string name="invalid_action">Invalid intent received: %s</string>
    <string name="password">Password</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_required">Unlock required</string>
    <string name="password_incorrect">Password incorrect.</string>
    <string name="app_lock">App lock</string>
    <string name="app_lock_description">Require password to access Amarok.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="set_password">Set password</string>
    <string name="password_length_error">Password must be between 3 and 15 characters.</string>
    <string name="password_mismatch_error">Passwords do not match.</string>
    <string name="apphider_dhizuku">Dhizuku mode</string>
    <string name="apphider_dhizuku_description">App-hiding with Dhizuku.\nA modern and improved solution for hiding apps on non-rooted devices. Installation and activation of the Dhizuku app are required.</string>
</resources>